# workflow_starter

./: .gitignore  CMakeLists.txt  README.md  note.txt
lz4-1.9.3/: .gitignore
lz4-1.9.3/prebuild/linux/: liblz4.so.1  lz4
openssl-1.1.1g/: configdata.pm  mynote.txt
openssl-1.1.1g/apps/: openssl
openssl-1.1.1g/crypto/: buildinf.h
openssl-1.1.1g/prebuild/linux/: libcrypto.so.1.1  libssl.so.1.1
openssl-1.1.1g/prebuild/win/: libcrypto.lib  libeay32.lib  libssl.lib  ssleay32.lib
snappy-1.1.9/: CMakeLists.txt
snappy-1.1.9/prebuild/linux/: config.h
src/: client.cc  main.cpp  message.cc  message.h
workflow-0.9.6/workflow-windows/: .travis.yml  workflow-config.cmake
workflow-0.9.6/workflow-windows/docs/: about-build-on-windows.md
workflow-0.9.6/workflow-windows/src/: CMakeLists.txt
zstd-1.5.0/: .gitignore
